# notanumber

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml
notanumber/: __init__.py  core.py
tests/: test_notanumber.py
