[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notanumber"
version = "0.2.0"
description = "Store bytes in fp16 floats through creative abuse"
readme = "README.md"
authors = [
    {name = "knighton", email = "iamknighton@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
keywords = [
    "float16",
    "fp16",
    "IEEE754",
    "encoding",
    "nan",
    "subnormal",
    "creative",
    "cursed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/knighton/notanumber"
Documentation = "https://github.com/knighton/notanumber#readme"
Repository = "https://github.com/knighton/notanumber.git"
Issues = "https://github.com/knighton/notanumber/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-setuptools",
]

[tool.setuptools]
packages = ["notanumber"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I", "N", "W", "UP"]
lint.ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
